	* src/docgen/HtmlDoc.py: add start_superscript and stop_superscript
	* src/docgen/OpenOfficeDoc.py: add start_superscript and stop_superscript
	* src/docgen/LaTeXDoc.py: add start_superscript and stop_superscript
	* src/plugins/IndivComplete.py: fix source citations (0000867)
	* src/ReportBase.py: fix source citations (0000867)

2007-01-30  Don Allingham  <don@gramps-project.org>
	* src/plugins/EventCmp.py: (#886) properly handle CANCEL on save dialog
	* src/ReportBase/_ReportDialog.py: error reporting
	* src/plugins/NarrativeWeb.py: error reporting

2007-01-30  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/RemoveUnused.py: Rewrite to offer object list
	proposed for removal.
	* src/DisplayTabs/_BackRefList.py (edit_button_clicked): Change
	argument order in EditEvent call.
	* src/DataViews/_EventView.py: Change argument order in EditEvent call.
	* src/Editors/_EditEvent.py: Change argument order.
	* configure.in: Bump up the version.

2007-01-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ScratchPad.py: Fix crash in GrampsType escaping;
	Additional tooltips for more objects.

2007-01-29  Benny Malengier  <benny.malengier@ugent.be>
	* src/DataViews/_PersonView.py: numlock handling
	* src/PageView.py: numlock handling
	* src/Filters/_SearchBar.py: numlock handling
	* src/Filters/SideBar/_SidebarFilter.py: numlock handling

2007-01-29  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: refactoring
	* src/DisplayModels/_PeopleModel.py: refactoring
	* src/DisplayModels/_BaseModel.py: Refactor out node/path maps
	* various: remove sets import
	* NEWS: update
	* configure.in: update to 2.2.6
	* src/ReportBase/_ReportOptions.py: fix landscape saving.

2007-01-28  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (_init_lists): Change Undo History binding to
	Ctrl+H because AltH was colliding with Help menu shortcut.
	* NEWS: Update.

2007-01-27  Don Allingham  <don@gramps-project.org>